<resources>
    <string name="app_name">Puntuaciones de Filmaffinity</string>
    <string name="button_close">Cerrar</string>
    <string name="button_open_link">Abrir en FA</string>
    <string name="app_headline">Puntuaciones de Filmaffinity</string>
    <string name="app_short_description">Encuentra las puntuaciones de Filmaffinity sin salir de tu app de video preferida</string>
    <string name="app_long_description_line_1">Encuentra una buena serie o película gracias a <b>Filmaffinity</b> sin salir de tu app de video favorita.</string>
    <string name="app_long_description_line_2">Simplemente comparte la serie o película con esta aplicación y la puntuación aparecerá directamente en tu pantalla.</string>
    <string name="permission_title">Lo importante, primero</string>
    <string name="permission_description">Para poder mostrar la puntuacion de Filmaffinity sobre las series y películas, necesitamos que nos des permiso para dibujar sobre otras aplicaciones en tus ajustes</string>
    <string name="permission_cta">Dar permiso</string>
    <string name="how_it_works_title">¿Cómo funciona?</string>
    <string name="how_it_works_description">Abre los detalles de una serie o película y haz click en <b>Compartir</b></string>
    <string name="copy_link_title">Copia el enlace</string>
    <string name="copy_link_description"><![CDATA[Selecciona la opción <b>Copiar enlace</b> en el menú de <b>Compartir</b>]]></string>
    <string name="share_link_title">Comparte el video</string>
    <string name="share_link_description">Selecciona esta aplicación de la lista de aplicaciones con las que compartir el video</string>
    <string name="rating_title">Puntuación</string>
    <string name="rating_description">Al momento aparecerá la puntuación de <b>Filmaffinity</b> sobre la serie. Haz click en ella para ver mas detalles</string>
    <string name="how_it_works_button">Como funciona</string>
    <string name="success_text">¡Todo listo! Ya puedes usar la aplicación. Comparte el link de una película o serie y abrelo con esta App</string>
    <string name="success_text_2">Netflix | Filmin | Primevideo </string>
    <string name="rating_not_found">No se ha encontrado la puntuación en Filmaffinity</string>
    <string name="find_rating_error_toast">Error buscando la puntuación. Intentalo de nuevo</string>
    <string name="share_label">Puntuación</string>
    <string name="permission_draw_declined_title">Permiso no concedido</string>
    <string name="permission_draw_declined_description">Para poder funcionar, esta app necesita permisos para dibujar sobre otras aplicaciones</string>
    <string name="permission_draw_declined_try_again">Volver a intentarlo</string>
    <string name="permission_draw_declined_cancel">Cancelar</string>
    <string name="all_ready">Todo listo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
